--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#experiance" data-target="#experiance"><span>Experiance</span></a>
+          <a class="nav-link " href="/#experiance" data-target="#experiance"><span>Experience</span></a>
         </li>
 
         
