--- a/project/burncare/index.html
+++ b/project/burncare/index.html
@@ -478,7 +478,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#experiance"><span>Experiance</span></a>
+          <a class="nav-link " href="/#experiance"><span>Experience</span></a>
         </li>
 
         
