--- a/courses/example/example1/index.html
+++ b/courses/example/example1/index.html
@@ -439,7 +439,7 @@ Tip 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tell
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#experiance"><span>Experience</span></a>
+          <a class="nav-link " href="/#experience"><span>Experience</span></a>
         </li>
 
         
